// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations Create 3 Sprints 1`] = `
Object {
  "sprint1": Object {
    "id": "sp1test",
    "sprintNo": 1,
  },
  "sprint2": Object {
    "id": "sp2test",
    "sprintNo": 2,
  },
  "sprint3": Object {
    "id": "sp3test",
    "sprintNo": 3,
  },
}
`;

exports[`Mutations Create 3 UserStories 1`] = `
Object {
  "uStory1": Object {
    "id": "us1test",
    "storyText": "Example User Story 1",
  },
  "uStory2": Object {
    "id": "us2test",
    "storyText": "Example User Story 2",
  },
  "uStory3": Object {
    "id": "us3test",
    "storyText": "Example User Story 3",
  },
}
`;

exports[`Mutations Create 3 tickets 1`] = `
Object {
  "tick1": Object {
    "desc": "Create API for backend and frontend",
    "done": false,
    "hourEstimate": 5,
    "id": "t1test",
    "issueNumber": 1,
    "title": "Set Up API",
  },
  "tick2": Object {
    "desc": "Create Login Page for users to enter credentials",
    "done": false,
    "hourEstimate": 5,
    "id": "t2test",
    "issueNumber": 2,
    "title": "login page",
  },
  "tick3": Object {
    "desc": "Create landing page for client side SPA",
    "done": false,
    "hourEstimate": 5,
    "id": "t3test",
    "issueNumber": 3,
    "title": "Landing page",
  },
}
`;

exports[`Mutations Create 3 tickets 1`] = `
Object {
  "tick1": Object {
    "desc": "Create API for backend and frontend",
    "done": false,
    "hourEstimate": 5,
    "id": "t1test",
    "issueNumber": 1,
    "title": "Set Up API",
  },
  "tick2": Object {
    "desc": "Create Login Page for users to enter credentials",
    "done": false,
    "hourEstimate": 5,
    "id": "t2test",
    "issueNumber": 2,
    "title": "login page",
  },
  "tick3": Object {
    "desc": "Create landing page for client side SPA",
    "done": false,
    "hourEstimate": 5,
    "id": "t3test",
    "issueNumber": 3,
    "title": "Landing page",
  },
}
`;

exports[`Mutations Link 3 Tickets to Sprints 1`] = `
Object {
  "SprintTic1": Object {
    "from": Object {
      "id": "t1test",
    },
    "to": Object {
      "id": "sp1test",
    },
  },
  "SprintTic2": Object {
    "from": Object {
      "id": "t2test",
    },
    "to": Object {
      "id": "sp2test",
    },
  },
  "SprintTic3": Object {
    "from": Object {
      "id": "t3test",
    },
    "to": Object {
      "id": "sp3test",
    },
  },
}
`;

exports[`Mutations Link 3 Tickets to UserStories 1`] = `
Object {
  "UStoryTic1": Object {
    "from": Object {
      "id": "t1test",
    },
    "to": Object {
      "id": "us1test",
    },
  },
  "UStoryTic2": Object {
    "from": Object {
      "id": "t2test",
    },
    "to": Object {
      "id": "us2test",
    },
  },
  "UStoryTic3": Object {
    "from": Object {
      "id": "t3test",
    },
    "to": Object {
      "id": "us3test",
    },
  },
}
`;
